// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtherLoanAmountField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos kNXvwN"
          id="otherLoanAmountField"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value="test"
        />
        <span
          class="sc-kfzAmx dBxeom"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podany kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos falFbQ"
  id="otherLoanAmountField"
  name="name"
  placeholder="Kwota obecnych zobowiązań finansowych"
  type="text"
  value=""
/>
`;

exports[`<OtherLoanAmountField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos kNXvwN"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych*"
          required=""
          type="text"
          value=""
        />
        <span
          class="sc-kfzAmx dBxeom"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos falFbQ"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value=""
        />
        <span
          class="sc-kfzAmx dBxeom"
        >
          PLN
        </span>
      </div>
    </div>
  </form>
</div>
`;
